[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Jeremy Haak <jeremyrhaak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
array2d = "0.2.1"
cargo-aoc = "0.3.2"
counter = "0.5.2"
itertools = "0.10.0"
lazy_static = "1.4.0"
regex = "1.4.2"
